Added Endless Reach VR portfolio item
Also fixed a spacing issue with youtube feeds on certain portfolio pages

--- a/soverance.com/Areas/Echosphere/Views/Echosphere/Index.cshtml
+++ b/soverance.com/Areas/Echosphere/Views/Echosphere/Index.cshtml
@@ -11,6 +11,7 @@
             </h1>
             <div class="breadcrumbs">
                 <a asp-area="" asp-controller="Home" asp-action="Index">Home</a> /
+                <a href="#">Studio</a> /
                 <a asp-area="" asp-controller="Home" asp-action="Portfolio">Portfolio</a> /
                 <span class="color-1">Echosphere</span>
             </div>
@@ -170,14 +171,8 @@
                         </tr>
                     </tbody>
                 </table>
-            </div>            
+            </div>
         </div>
-    </div>
-</section>
-<!-- SECTION END -->
-<!-- STREAMS SECTION START -->
-<section class="ptb19">
-    <div class="container">
         <div class="row">
             <div class="col-lg-12 st-tabs tabs mt70">
                 <div class="tabs-nav">
@@ -229,4 +224,4 @@
         </div>
     </div>
 </section>
-<!-- STREAMS SECTION END -->
+<!-- SECTION END -->
