--- a/soverance.com/Areas/EndlessReach/Views/EndlessReach/VR.cshtml
+++ b/soverance.com/Areas/EndlessReach/Views/EndlessReach/VR.cshtml
@@ -1,19 +1,19 @@
 ﻿@{
-    ViewData["Title"] = "CTF-Elemental";
+    ViewData["Title"] = "Endless Reach VR";
 }
 
 <!-- PAGE NAME START -->
-<section class="page-name parallax" style="background-image: url(../images/portfolio/ctf-elemental/page-name.jpg)" data-paroller-factor="0.1" data-paroller-type="background" data-paroller-direction="vertical">
+<section class="page-name parallax" style="background-image: url(../images/portfolio/ervr/page-name.jpg)" data-paroller-factor="0.1" data-paroller-type="background" data-paroller-direction="vertical">
     <div class="container">
         <div class="row">
             <h1 class="page-title">
-                CTF-Elemental
+                Endless Reach VR
             </h1>
             <div class="breadcrumbs">
                 <a asp-area="" asp-controller="Home" asp-action="Index">Home</a> /
                 <a href="#">Studio</a> /
                 <a asp-area="" asp-controller="Home" asp-action="Portfolio">Portfolio</a> /
-                <span class="color-1">CTF-Elemental</span>
+                <span class="color-1">Endless Reach VR</span>
             </div>
         </div>
     </div>
@@ -26,63 +26,63 @@
             <div class="top-bl">
                 <div class="game-img-slider bg-arrow">
                     <div class="image-wrapper">
-                        <a href="~/images/portfolio/ctf-elemental/ut1.jpg" data-lightbox="game-slides">
-                            <img src="~/images/portfolio/ctf-elemental/small-ut1.jpg" alt="" class="img-responsive">
+                        <a href="~/images/portfolio/ervr/1.jpg" data-lightbox="game-slides">
+                            <img src="~/images/portfolio/ervr/small-1.jpg" alt="" class="img-responsive">
                         </a>
                     </div>
                     <div class="image-wrapper">
-                        <a href="~/images/portfolio/ctf-elemental/ut2.jpg" data-lightbox="game-slides">
-                            <img src="~/images/portfolio/ctf-elemental/small-ut2.jpg" alt="" class="img-responsive">
+                        <a href="~/images/portfolio/ervr/2.jpg" data-lightbox="game-slides">
+                            <img src="~/images/portfolio/ervr/small-2.jpg" alt="" class="img-responsive">
                         </a>
                     </div>
                     <div class="image-wrapper">
-                        <a href="~/images/portfolio/ctf-elemental/ut3.jpg" data-lightbox="game-slides">
-                            <img src="~/images/portfolio/ctf-elemental/small-ut3.jpg" alt="" class="img-responsive">
+                        <a href="~/images/portfolio/ervr/3.jpg" data-lightbox="game-slides">
+                            <img src="~/images/portfolio/ervr/small-3.jpg" alt="" class="img-responsive">
                         </a>
                     </div>
                     <div class="image-wrapper">
-                        <a href="~/images/portfolio/ctf-elemental/ut4.jpg" data-lightbox="game-slides">
-                            <img src="~/images/portfolio/ctf-elemental/small-ut4.jpg" alt="" class="img-responsive">
+                        <a href="~/images/portfolio/ervr/4.jpg" data-lightbox="game-slides">
+                            <img src="~/images/portfolio/ervr/small-4.jpg" alt="" class="img-responsive">
                         </a>
                     </div>
                     <div class="image-wrapper">
-                        <a href="~/images/portfolio/ctf-elemental/ut5.jpg" data-lightbox="game-slides">
-                            <img src="~/images/portfolio/ctf-elemental/small-ut5.jpg" alt="" class="img-responsive">
+                        <a href="~/images/portfolio/ervr/5.jpg" data-lightbox="game-slides">
+                            <img src="~/images/portfolio/ervr/small-5.jpg" alt="" class="img-responsive">
                         </a>
                     </div>
                     <div class="image-wrapper">
-                        <a href="~/images/portfolio/ctf-elemental/ut6.jpg" data-lightbox="game-slides">
-                            <img src="~/images/portfolio/ctf-elemental/small-ut6.jpg" alt="" class="img-responsive">
+                        <a href="~/images/portfolio/ervr/6.jpg" data-lightbox="game-slides">
+                            <img src="~/images/portfolio/ervr/small-6.jpg" alt="" class="img-responsive">
                         </a>
                     </div>
                     <div class="image-wrapper">
-                        <a href="~/images/portfolio/ctf-elemental/ut7.jpg" data-lightbox="game-slides">
-                            <img src="~/images/portfolio/ctf-elemental/small-ut7.jpg" alt="" class="img-responsive">
+                        <a href="~/images/portfolio/ervr/7.jpg" data-lightbox="game-slides">
+                            <img src="~/images/portfolio/ervr/small-7.jpg" alt="" class="img-responsive">
                         </a>
                     </div>
                     <div class="image-wrapper">
-                        <a href="~/images/portfolio/ctf-elemental/ut8.jpg" data-lightbox="game-slides">
-                            <img src="~/images/portfolio/ctf-elemental/small-ut8.jpg" alt="" class="img-responsive">
+                        <a href="~/images/portfolio/ervr/8.jpg" data-lightbox="game-slides">
+                            <img src="~/images/portfolio/ervr/small-8.jpg" alt="" class="img-responsive">
                         </a>
                     </div>
                     <div class="image-wrapper">
-                        <a href="~/images/portfolio/ctf-elemental/ut9.jpg" data-lightbox="game-slides">
-                            <img src="~/images/portfolio/ctf-elemental/small-ut9.jpg" alt="" class="img-responsive">
+                        <a href="~/images/portfolio/ervr/9.jpg" data-lightbox="game-slides">
+                            <img src="~/images/portfolio/ervr/small-9.jpg" alt="" class="img-responsive">
                         </a>
                     </div>
                     <div class="image-wrapper">
-                        <a href="~/images/portfolio/ctf-elemental/ut10.jpg" data-lightbox="game-slides">
-                            <img src="~/images/portfolio/ctf-elemental/small-ut10.jpg" alt="" class="img-responsive">
+                        <a href="~/images/portfolio/ervr/10.jpg" data-lightbox="game-slides">
+                            <img src="~/images/portfolio/ervr/small-10.jpg" alt="" class="img-responsive">
                         </a>
                     </div>
                     <div class="image-wrapper">
-                        <a href="~/images/portfolio/ctf-elemental/ut11.jpg" data-lightbox="game-slides">
-                            <img src="~/images/portfolio/ctf-elemental/small-ut11.jpg" alt="" class="img-responsive">
+                        <a href="~/images/portfolio/ervr/11.jpg" data-lightbox="game-slides">
+                            <img src="~/images/portfolio/ervr/small-11.jpg" alt="" class="img-responsive">
                         </a>
                     </div>
                     <div class="image-wrapper">
-                        <a href="~/images/portfolio/ctf-elemental/ut12.jpg" data-lightbox="game-slides">
-                            <img src="~/images/portfolio/ctf-elemental/small-ut12.jpg" alt="" class="img-responsive">
+                        <a href="~/images/portfolio/ervr/12.jpg" data-lightbox="game-slides">
+                            <img src="~/images/portfolio/ervr/small-12.jpg" alt="" class="img-responsive">
                         </a>
                     </div>
                 </div>
@@ -92,33 +92,39 @@
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 mb30">
                 <div class="tab-head table uppercase fsize-14 fweight-700">
                     <div class="table-cell valign-middle ws-20 color-1">
-                        Unreal Tournament Mod
+                        Hardcore VR Shmup
                     </div>
                     <div class="table-cell valign-middle text-right">
-                        Unavailable
+                        Released Aug 3, 2014
                     </div>
                 </div>
-                <div class="uppercase fsize-32 fweight-700 font-agency color-white lheight-normal">
-                    CTF-Elemental
+                <br />
+                <div class="image-wrapper">
+                    <img src="~/images/logos/endlessreachmobile.png" alt="" class="img-responsive center-block">
                 </div>
                 <div class="mt50 lheight-26 fweight-300">
                     <p>
-                        CTF-Elemental is a custom capture-the-flag map mod for the latest version of Epic's Unreal Tournament.
+                        Endless Reach is a hardcore shoot ‘em up that puts you in the shoes of a lone space drone pilot,
+                        laying claim to the uncharted galaxy known as the Reach.
                     </p>
                     <p>
-                        Originally released in March of 2015, the CTF-Elemental map was based on the assets from Epic's GDC 2012 tech demo, <i>Elemental</i>.
-                        The map had one major revision (to version 0.2), but unfortunately did not receive any further updates, and now is no longer playable.
+                        Send your starfighter drone out into the unknown,
+                        and use it to battle your way through the alien hordes and make the regions safe for colonization.
+                        The future of humanity depends on you!
                     </p>
                     <p>
-                        One day we hope to make an update to this!
+                        Originally built for mobile and then later redesigned for virtual reality devices, this shmup provided a unique vision of what arcade space combat could look like in VR.
+                    </p>
+                    <p>
+                        This prototype was developed with Unity 4 using the <i>Endless Reach</i> mobile game as a starting point. It used some of the earliest public Oculus SDKs (<i>starting with SDK 0.2 for Rift DK1</i>), and was one of the first 100 titles available on the now-defunct Oculus Share.
                     </p>
                 </div>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 mb30">
                 <div class="default-tabs">
                     <div class="image-bl">
-                        <video id="elemental" class="vjs-big-play-centered video-js vjs-default-skin vjs-16-9 game-full-img" controls preload="auto" width="570" height="450"
-                               data-setup='{ "techOrder": ["youtube"], "sources": { "type": "video/youtube", "src": "https://www.youtube.com/watch?v=VfxeolE-_p8"}}'></video>
+                        <video id="ervr" class="vjs-big-play-centered video-js vjs-default-skin vjs-16-9 game-full-img" controls preload="auto" width="570" height="450"
+                               data-setup='{ "techOrder": ["youtube"], "sources": { "type": "video/youtube", "src": "https://www.youtube.com/watch?v=vMxKwNTE3Ag"}}'></video>
                     </div>
                 </div>
             </div>
@@ -133,9 +139,9 @@
                                         <div class="latest-title table-cell valign-middle text-center pl20">
                                             <div class="title-top font-agency fweight-700 uppercase color-white">
                                                 <i class="fa fa-shield fsize-80 fweight-400 color-6"></i>
-                                                <p>Visceral Combat</p>
+                                                <p>Intense Combat</p>
                                             </div>
-                                            <p>Experience a new way to enjoy the hectic first-person sci-fi combat of Unreal Tournament.</p>
+                                            <p>Your Starfighter is equipped with powerful weapons, including blasters, missles, and a boost feature. Collect powerups to deal more damage, and use head tracking to lock-on homing missles.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -145,10 +151,10 @@
                                     <div class="table-row">
                                         <div class="latest-title table-cell valign-middle text-center pl20">
                                             <div class="title-top font-agency fweight-700 uppercase color-white">
-                                                <i class="fa fa-fire fsize-80 fweight-400 color-6"></i>
-                                                <p>Elemental Theme</p>
+                                                <i class="fa fa-puzzle-piece fsize-80 fweight-400 color-6"></i>
+                                                <p>Devastating Overloads</p>
                                             </div>
-                                            <p>Fight your way through a gorgeous environment of fire and ice, inspired by Epic's GDC 2012 demo, <i>Elemental</i>.</p>
+                                            <p>Upgrade your cannon too much and you may find yourself overloading with power - time the release of this energy just right and you can destroy everything in range. Miss the timing, and your ship explodes.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -158,10 +164,10 @@
                                     <div class="table-row">
                                         <div class="latest-title table-cell valign-middle text-center pl20">
                                             <div class="title-top font-agency fweight-700 uppercase color-white">
-                                                <i class="fa fa-eye fsize-80 fweight-400 color-6"></i>
-                                                <p>Twist on CTF</p>
+                                                <i class="fa fa-gamepad fsize-80 fweight-400 color-6"></i>
+                                                <p>Online Leaderboards</p>
                                             </div>
-                                            <p>In CTF-Elemental, you play to dominate the arena held by two powerful Elementals, caught in eternal conflict. Summon the Elementals to protect the flag and grant bonuses to your team.</p>
+                                            <p>Compete with other players from around the globe to see who can get the highest score on each of the ten levels.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -178,7 +184,7 @@
                         <li class="active col-lg-4 col-md-4 col-sm-12 col-xs-12">
                             <a href="#stream-2" data-toggle="tab">
                                 <div class="tab-title">
-                                    CTF-Elemental YouTube Playlist
+                                    Endless Reach VR YouTube Playlist
                                 </div>
                             </a>
                         </li>
@@ -203,7 +209,7 @@
                             </div>
                         </div>
                         <div class="right-col col-lg-6 col-md-6 col-sm-12 col-xs-12 equal-height">
-                            @foreach (var video in ViewBag.ElementalPlaylist)
+                            @foreach (var video in ViewBag.ERVRPlaylist)
                             {
                                 <div class="item-g">
                                     <div class="img-com inline-block valign-middle equal-height">
