--- a/soverance.com/Areas/FinalFantasyFighter/Views/FinalFantasyFighter/Index.cshtml
+++ b/soverance.com/Areas/FinalFantasyFighter/Views/FinalFantasyFighter/Index.cshtml
@@ -11,6 +11,7 @@
             </h1>
             <div class="breadcrumbs">
                 <a asp-area="" asp-controller="Home" asp-action="Index">Home</a> /
+                <a href="#">Studio</a> /
                 <a asp-area="" asp-controller="Home" asp-action="Portfolio">Portfolio</a> /
                 <span class="color-1">FFXI: Fighter</span>
             </div>
