--- a/soverance.com/Views/Home/Portfolio.cshtml
+++ b/soverance.com/Views/Home/Portfolio.cshtml
@@ -157,8 +157,36 @@
                                 <i class="fa fa-star" aria-hidden="true"></i>
                                 <i class="fa fa-star" aria-hidden="true"></i>
                                 <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star-o" aria-hidden="true"></i>
+                                <i class="fa fa-star-o" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="g-item col-lg-4 col-md-4 col-sm-6 col-xs-12 mb30 wow fadeInUp" data-wow-duration="1s">
+                    <div class="image-container">
+                        <img src="~/images/portfolio/preview-endlessreach-vr.jpg" alt="" class="img-responsive">
+                    </div>
+                    <div class="bottom-container">
+                        <div class="table">
+                            <div class="table-row">
+                                <div class="table-cell fsize-14 color-8 fweight-700 uppercase">Oculus VR</div>
+                                <div class="table-cell fsize-14 color-2 fweight-700 uppercase text-right">Aug 3, 2014</div>
+                            </div>
+                        </div>
+                        <div class="text-center mt20">
+                            <a href="/endlessreach/vr" class="g-name fsize-30 fweight-700 font-agency uppercase color-white">
+                                Endless Reach VR
+                            </a>
+                            <div class="mt20 color-2 lheight-26 equal-height" data-trim="90">
+                                A hardcore shoot 'em up prototype for virtual reality
+                            </div>
+                            <div class="rating text-center mt20">
                                 <i class="fa fa-star" aria-hidden="true"></i>
                                 <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star-o" aria-hidden="true"></i>
+                                <i class="fa fa-star-o" aria-hidden="true"></i>
                             </div>
                         </div>
                     </div>
