Lots of work on CreatePost

--- a/soverance.com/Views/Blog/Index.cshtml
+++ b/soverance.com/Views/Blog/Index.cshtml
@@ -493,7 +493,7 @@
                                             <div class="table table-nobackground">
                                                 <div class="table-row">
                                                     <div class="latest-img table-cell valign-middle">
-                                                        <img src="@post.Image" alt="">
+                                                        <img src="@post.Slider1" alt="">
                                                     </div>
                                                     <div class="latest-title table-cell valign-middle pl20">
                                                         <div class="title-top font-agency fweight-700 uppercase color-white">
