--- a/soverance.com/Views/Blog/CreatePost.cshtml
+++ b/soverance.com/Views/Blog/CreatePost.cshtml
@@ -21,46 +21,137 @@
 </section>
 <!-- PAGE NAME END -->
 <!-- SECTION START -->
-<section class="blog-content ptb150 each-element">
+<section class="blog-content ptb50 each-element">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-7 col-xs-12">
                 <form asp-action="CreatePost">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    <div class="form-group">
-                        <select asp-for="CategoryId" asp-items="ViewBag.CategoryDropDownList" class="dropdown border-dropdown plr50 ptb19 color-white" style="width:37.5%">
-                            <option selected="selected" value="">Select Category</option>
-                        </select>
-                        <span asp-validation-for="CategoryId" class="text-danger"></span>
-                        <p></p>
-                        <br />
-                        <label asp-for="Date" class="control-label"></label>
-                        <input asp-for="Date" class="form-control width-30" value="@ViewBag.CurrentDate" />
-                        <p>Always enter the date in "<strong>MM/DD/YYYY</strong>" format.</p>
-                        <span asp-validation-for="Date" class="text-danger"></span>
-                        <br />
-                        <label asp-for="Image" class="control-label">IMAGE - 270 x 282</label>
-                        <input asp-for="Image" class="form-control" />
-                        <p>Images must be manually uploaded to the root image dir and then here you will specify the local syntax "<strong>../images/</strong>whatever/your/file/path/is.jpg" (no quotes).</p>
-                        <span asp-validation-for="Image" class="text-danger"></span>
-                        <label asp-for="Title" class="control-label"></label>
-                        <input asp-for="Title" class="form-control" />
-                        <p>Enter a title in plain text - spaces and invalid characters will be removed to create the post's URL slug.</p>
-                        <span asp-validation-for="Title" class="text-danger"></span>
-                        <label asp-for="Content" class="control-label"></label>
-                        <textarea asp-for="Content" class="form-control" rows="25"></textarea>
-                        <p>You may enter pure HTML into this text area.</p>
-                        <span asp-validation-for="Content" class="text-danger"></span>
-                        <label asp-for="Author" class="control-label"></label>
-                        <input asp-for="Author" class="form-control" value="@User.FindFirst("name").Value" />
-                        <span asp-validation-for="Author" class="text-danger width-50"></span>
-                        <br />
+                    <div class="form-group">                        
+                        <div class="col-sm-12 col-xs-12">
+                            <div class="mt50">
+                                <div class="tabs info-tabs default-tabs text-center mt60">
+                                    <div class="tabs-nav">
+                                        <ul class="list-inline nav nav-tabs fsize-0">
+                                            <li class="active">
+                                                <a href="#single" data-toggle="tab" class="fsize-14 fweight-700 uppercase" aria-expanded="true">
+                                                    Post Config
+                                                </a>
+                                            </li>
+                                            <li class="">
+                                                <a href="#video" data-toggle="tab" class="fsize-14 fweight-700 uppercase" aria-expanded="false">
+                                                    Video Config
+                                                </a>
+                                            </li>
+                                            <li class="">
+                                                <a href="#slider" data-toggle="tab" class="fsize-14 fweight-700 uppercase" aria-expanded="false">
+                                                    Images Config
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="tab-content relative">
+                                        <div class="tab-pane fade text-left clearfix active in" id="single">
+                                            <div class="main-text p60">
+                                                <h5 class="fsize-32 fweight-700 font-agency uppercase">New Post Configuration:</h5>
+                                                <p class="lheight-26 mt20">                                                    
+                                                    Enter some default post configuration data here.
+                                                </p>
+                                                <ul class="list-1 pt10">
+                                                    <li class="color5">
+                                                        A category is required.
+                                                    </li>
+                                                    <li class="color5">
+                                                        Always enter the date in "<strong>MM/DD/YYYY</strong>" format.
+                                                    </li>
+                                                    <li class="color5">
+                                                        Titles should be entered in plain text.
+                                                    </li>
+                                                </ul>
+                                                <p class="lheight-26 mt20">
+                                                    Once saved, the title will be automatically sanitized and formatted to be used as the post's URL slug.
+                                                </p>
+                                                <p>
+                                                    <select asp-for="CategoryId" asp-items="ViewBag.CategoryDropDownList" class="dropdown border-dropdown plr50 ptb19 color-white" style="width:50%">
+                                                        <option selected="selected" value="">Select Category</option>
+                                                    </select>
+                                                    <span asp-validation-for="CategoryId" class="text-danger"></span>
+                                                </p>
+                                                <p>
+                                                    <label asp-for="Date" class="control-label"></label>
+                                                    <input asp-for="Date" class="form-control width-30" value="@ViewBag.CurrentDate" />
+                                                    <span asp-validation-for="Date" class="text-danger"></span>
+                                                </p>
+                                                <p class="lheight-30 mt20">
+                                                    <label asp-for="Title" class="control-label"></label>
+                                                    <input asp-for="Title" class="form-control" />
+                                                    <span asp-validation-for="Title" class="text-danger"></span>
+                                                </p>
+                                                <p>
+                                                    <label asp-for="Content" class="control-label"></label>
+                                                    <textarea asp-for="Content" class="form-control" rows="25"></textarea>
+                                                    <span asp-validation-for="Content" class="text-danger"></span>
+                                                </p>
+                                                <p>
+                                                    <label asp-for="Author" class="control-label"></label>
+                                                    <input asp-for="Author" class="form-control" value="@User.FindFirst("name").Value" />
+                                                    <span asp-validation-for="Author" class="text-danger width-50"></span>
+                                                </p>
+                                            </div>
+                                        </div>
+                                        <div class="tab-pane fade text-left clearfix" id="video">
+                                            <div class="main-text p60">
+                                                <h5 class="fsize-32 fweight-700 font-agency uppercase">Video Post Type:</h5>
+                                                <p class="lheight-30 mt20">
+                                                    Occasionally the post may be advertised on various pages of the site using a YouTube video preview.
+                                                    Specify a YouTube "watch" URL, i.e.
+                                                </p>
+                                                <p>
+                                                    https://www.youtube.com/watch?v=8dH-CnwhWC4
+                                                </p>
+                                                <h5 class="fsize-32 fweight-700 font-agency uppercase">YouTube Video</h5>
+                                                <p class="lheight-30 mt20">
+                                                    <label asp-for="VideoUrl" class="control-label"></label>
+                                                    <input asp-for="VideoUrl" class="form-control" />                                                    
+                                                    <span asp-validation-for="VideoUrl" class="text-danger"></span>
+                                                </p>
+                                            </div>
+                                        </div>
+                                        <div class="tab-pane fade text-left clearfix" id="slider">
+                                            <div class="main-text p60">
+                                                <h5 class="fsize-32 fweight-700 font-agency uppercase">Images:</h5>
+                                                <p class="lheight-30 mt20">
+                                                    Occasionally the post may be advertised on various pages of the site using either a static image or a slider preview.
+                                                    The images should all be 270 x 282.  Slider previews will use all three images, while static previews will just use the first one.                                                  
+                                                </p>
+                                                <p>
+                                                    Images should be uploaded locally and then specified with the "<strong>../images/</strong>" syntax.
+                                                </p>
+                                                <h5 class="fsize-32 fweight-700 font-agency uppercase">SLIDER IMAGES - 270 x 282</h5>
+                                                <p class="lheight-30 mt20">
+                                                    <label asp-for="Slider1" class="control-label"></label>
+                                                    <input asp-for="Slider1" class="form-control" value="../images/blog/slider-blank.jpg" />
+                                                    <span asp-validation-for="Slider1" class="text-danger"></span>
+                                                    <label asp-for="Slider2" class="control-label"></label>
+                                                    <input asp-for="Slider2" class="form-control" value="../images/blog/slider-blank.jpg" />
+                                                    <span asp-validation-for="Slider2" class="text-danger"></span>
+                                                    <label asp-for="Slider3" class="control-label"></label>
+                                                    <input asp-for="Slider3" class="form-control" value="../images/blog/slider-blank.jpg" />
+                                                    <span asp-validation-for="Slider3" class="text-danger"></span>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="form-group">
                         <input type="submit" value="Create" class="btn border-btn plr50 ptb19 color-white" />
                     </div>
                 </form>
             </div>
+            
         </div>
         <div>
             <a asp-action="Index">Back to List</a>
