--- a/soverance.com/Views/Blog/EditPost.cshtml
+++ b/soverance.com/Views/Blog/EditPost.cshtml
@@ -37,9 +37,6 @@
                         <label asp-for="Date" class="control-label"></label>
                         <input asp-for="Date" class="form-control width-50" />
                         <span asp-validation-for="Date" class="text-danger"></span>
-                        <label asp-for="Image" class="control-label"></label>
-                        <input asp-for="Image" class="form-control" />
-                        <span asp-validation-for="Image" class="text-danger"></span>
                         <label asp-for="Title" class="control-label"></label>
                         <input asp-for="Title" class="form-control" />
                         <span asp-validation-for="Title" class="text-danger"></span>
@@ -49,6 +46,18 @@
                         <label asp-for="Author" class="control-label"></label>
                         <input asp-for="Author" class="form-control" />
                         <span asp-validation-for="Author" class="text-danger width-50"></span>
+                        <label asp-for="VideoUrl" class="control-label"></label>
+                        <input asp-for="VideoUrl" class="form-control" />
+                        <span asp-validation-for="VideoUrl" class="text-danger"></span>
+                        <label asp-for="Slider1" class="control-label"></label>
+                        <input asp-for="Slider1" class="form-control" />
+                        <span asp-validation-for="Slider1" class="text-danger"></span>
+                        <label asp-for="Slider2" class="control-label"></label>
+                        <input asp-for="Slider2" class="form-control" />
+                        <span asp-validation-for="Slider2" class="text-danger"></span>
+                        <label asp-for="Slider3" class="control-label"></label>
+                        <input asp-for="Slider3" class="form-control" />
+                        <span asp-validation-for="Slider3" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <input type="submit" value="Save" class="btn border-btn plr50 ptb19 color-white" />
