Fixed delete blog post/cat bug

--- a/soverance.com/Views/Blog/DeletePost.cshtml
+++ b/soverance.com/Views/Blog/DeletePost.cshtml
@@ -37,7 +37,7 @@
                             </dd>
                         </dl>
 
-                        <form asp-action="DeletePost">
+                        <form asp-action="ConfirmDeletePost">
                             <input type="hidden" asp-for="PostId" />
                             <input type="submit" value="Delete" class="btn border-btn plr50 ptb19 color-white" /> |
                             <a asp-action="Index">Back to List</a>
