--- a/soverance.com/Views/Blog/DeleteCategory.cshtml
+++ b/soverance.com/Views/Blog/DeleteCategory.cshtml
@@ -37,7 +37,7 @@
                             </dd>
                         </dl>
 
-                        <form asp-action="DeleteCategory">
+                        <form asp-action="ConfirmDeleteCategory">
                             <input type="hidden" asp-for="CategoryId" />
                             <input type="submit" value="Delete" class="btn border-btn plr50 ptb19 color-white" /> |
                             <a asp-action="Index">Back to List</a>
